task_3/nfs_server.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nfs-server-pod
  labels:
    role: nfs
spec:
  containers:
  - name: nfs-server-container
    image: cpuguy83/nfs-server
    securityContext:
      privileged: true
    args:
      - /exports

---

apiVersion: v1
kind: Service
metadata:
  name: nfs-service
spec:
  selector:
    role: nfs
  ports:
    - name: tcp-2049
      port: 2049
      protocol: TCP
    - name: udp-111
      port: 111
      protocol: UDP
