task_3/ingress_2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ingress
  labels:
    name: minio-ingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: minio-def
            port:
              number: 9001
      - pathType: Prefix
        path: "/web"
        backend:
          service:
            name: web-headless
            port:
              number: 80

---
apiVersion: v1
kind: Service
metadata:
  name: minio-def
spec:
  clusterIP: None
  selector:
    app: minio
  ports:
  - port: 9001
    targetPort: 9001
